--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ disqus_shortname: myshortname
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: ffc52c #80B3FF
+  primary: D11E48 #80B3FF
   primary-rgb: "255,197,44" #"128,179,255"
   secondary: 2c3e50 #FD6E8A
   secondary-dark: 233140 #A2122F
